--- a/Presentacion/Login.resx
+++ b/Presentacion/Login.resx
@@ -118,61 +118,48 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="Fabrizzi_logo.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="pictureBox1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAAOEAAABfCAYAAAAec6B/AAAABGdBTUEAALGPC/xhBQAADBFJREFUeF7t
-        nNtvDV0Yxv0j/eLCFa5odG5ENNpInKKyI2lJGtwowkjaSNoIRYRkShxKaZDSqK3qEOcmKsg4pkQQQSI2
-        iYQIrnDV732WNZPZW/eemTVTKp5f8kbtmXWYtd7DOs2MIYQQQgghhBBCCCGEEEIIIYQQQgghhBBCCCGE
-        EEIIIYQQQgghhBBCCCGEEEIIIYQQQgghhBBCCCGEEEIIIYQQMopoamqyNm7cmGlvb48tSIf0OitjHMex
-        li9fnqmrq0ucV5Bdu3ZZu3fvznR0dEQSqUdm27ZtqdYBz4Z8o0hzc3Nm7dq1icuXtrQaGxszeH79U2TQ
-        n6gH+jaObN68ObN69eoMytZZlUTut5BmuLxKCdIgrc4mNtLO1rp161LR21RAhy9YsMDev39/du/evbEF
-        6ZA+ieLcvHkzs2PHDkckO27cuER5Benv77e2b9+uni2OiAI6vb299sGDBxPX49atW1ZbW5uNZ4sq0p5O
-        V1eXcfk1NTXW1KlT1XOjbNRBXwrl8OHDVkNDg71p06asiYgDy1ZXV9uTJk0qWSbqhL4ZLo8ogrQ9PT2x
-        2+fixYuWpFdtk1RvUwMeD8Y0lACkh2fRWcbi5cuX1uXLlx3JJoe8bty44aKR9OVE3L17N/Pp0yeTZ8tJ
-        Onf27NnO1q1bjZ7L4/nz5xnJL24d/PJ37twZu/za2trMihUrvDKzqIO+FEp3d3fmyZMnxvrw7du3nDhS
-        J8wIHzx4YNIuPvfv34ezjN02ruv6OgG9NckjddDJ8L7qyaTz379/74pkowoeCEaDEK+zjIV0uC3luj+L
-        /9mJkydPdpYtW5bYQ3348CEjop5tcHAwBwMXyZaSe/fuoS7KIeBfGEKSiCh5+Mr24sWLnDyvCyUvJnJP
-        XvkwJvH6sRQFw/qgEYpETo8IdenSJVvqgbqECZ4FDuNnSbq+GDLq7Iry9etXK5fLxSpHl6F0pKyszDGJ
-        YtAJ6C3ygd6bOLnUwTzEM0J438+fPztSSVQ0VPBA8CwI8Tq7WAwMDFh79uxRUVAaFuWjGspDpdE4QSMs
-        Ly935TkdDH1LyZkzZ2xxAnAuqtPlOd3jx48bR2bJwjdCGSK6nZ2dztOnTzPF5MqVK7bc57x588Yzxpxl
-        WY547MhtnMQIwZ07d6yHDx9mZJRSUqS+ztu3b13db3By2atXr0Yu6/Xr19Zw+RaK9ItTV1fnOeqctEUW
-        80KdTSy07qq2gd5D//WlP0eBEUL5fluloHBQcpR99OjRIZmP4E+l+PDG+jZjgkZYVVWVnTZtWqRnw4JG
-        ZWUl0ikjEIV2NmzYYORoJL1vhHPnzs3OnDkztA4YVZw9e9aRvlBtI8rtbtmyJXJ7JDXCqEjUtFE3FCJO
-        1JUhYirTiEKuX79ue20hIxq3o6PDuBwaYQAM8aDcUqxS9P/++8+tqKhAQ6v/L1myxGlvbzceBoJCIxSJ
-        /GzoeM9BIDLHHRJ6SPI8IxSJlM+pU6esNWvWeKOE3Pjx450ZM2ZEao/fYYTB+kGampoc0xFRKcQZYaSF
-        Z1DlYBiaZFWTRhhAhmW2nn8NyXjfbW1tdSDwdPgN10T5E3nWJEaIzsIcDWklQmexzaEvxUKSGxkhePbs
-        mT9fXrRoUeS0v8MIEQXTik7FOHbsmAVnLEUoA9SroomehUaowYQa8x40LAQNjchYGB0nTJjgiEIZe70k
-        RihzEc8AcnAOJvttQNIbG+GPHz/8+ksbZRcvXhwp7UgbYWF0wmponDlrVPr7+215fmXoWJzBto2+ZMzf
-        YIQY1zvw+oWb8hD8bqqMQbApLl7OLxNzQ30pb56Ie1CuvhSboBFWV1e7tbW1DhS5lIiDyHR3d6t9JEkG
-        JXNv375t3PmS3tgIJRKPukiI6CR18R0l9gVHQpF7eno8HVHlYMU8yQa9x6g3Qsw92traMAwsujEv92Ku
-        lqjiMpn3hzLIM7gSivqgLF0fbCkYG0DQCCWa5bDCBmUOE+l8FQGRDvV7/Pix8fNKFsZzQm9UMJrmhHCS
-        Xt9hGpFk5bgYGBHhwIIUoQwQ+pBU5zxGvRFGRC2Zh23GFgOeFJN45APBkLO+vt7PC3/jNygeruNek5MR
-        IGiEJkgdht69e+ciMuosYyPZ5BnhrFmzQjtd+sQ6ffr0qFsdxUZ+MDpNnz5dqmq2P1wKrIx7oyEMQ7Ft
-        pC8l5m8wwhz2p0SypUSMJPRYUjGOHDliw4OiMCiXDHF/aWCJjP7SNzrB1AiCRij/5h1EwO/FBBFYkqhI
-        KP9XjsJ0KCRZ+EZYWVnpSmR1cJJnOMEpEijgn94nHA5EJxxckLxUnTBC6OzsTF2BkScWwrxyxHElXiUP
-        MuqNEJ7348ePUIBMMYE3NFVIKFJwQUaGflL8r54Uv+Gad19VVZXRxF8MyDfCmpoat7e31z+IoK/9ItIG
-        WBW1GxsbPUVQjgCruTrbWEhy3wgl3xxWfXHkqphoB6XKxb8wpt95YqYYFy5c8KOT6IHb19eXWnTyQL/D
-        4UgRqt8RdaFv+nIq/A1GOKKro2hQvaqmOrLUMAOdjHtwL9Jgoq4vRUYbliovznwMYA4i8xKkVQohSm0U
-        DSWtb4QxUFEbzsfk5FDaRtjV1ZUXnTAMTWOBrhAcmvf6HM8Pw9eXUuOfN8JHjx75q32tra3u4OBg0agr
-        QzOnpaVF3Su4SKuziUwSIwRQAm/fEl7ZZPglSX0jFGXGIgOGpHlvbeA3aXcV/TAPxQKSKL3xMCxNI0R0
-        gjOQPJQBwhhFUtcRtK1ekFPlYBiKIbC+nBr/tBHitSIpx+tMeLqw+SeuqXuFHNLGPZGR1AhxltSL3Bgq
-        ynwtdttIUt8IcSIIC02Ist77i/j70KFDNvYB5Rb1vDBKvIKks4hNmkaI6IThODKStkzlOGEheH8zOE1B
-        m588eXJE9PCfNkJ0HjoR5ZgAo4w7PElqhFh+9xaITIfEkjS4MFP0/CqULrjymOTtjbSMEE4iGJ2wbSBR
-        MPXohHb2FutE/xJtS4XxzxohhlXB40eNjY0uPH8UaWhoQOeodPL/WHORQiOMsj3ggUPcEydO9BWwubnZ
-        aHgoafOMUKRoHTBHhrPBvVBGnBjRl2KRhhFi/htYJIETyjtUkRbQP2z4e+Wgz/v6+kbMMP5ZI9y3b1/e
-        OVHMd6AoS5cuDZUDBw7450kRlcQzR1aEoBFie0CMyMGrV8NtD3iCjflr167ZOOYmbaEUQ/LAyqqRAkry
-        yEYIB4NFD7lVGT6i7/nz52P3RxpGiCNiXnQSpR169eqVOk2FV5zCBCOGKM4SK944hKD3hGHoQwMDAxjx
-        hJaD7RwsWsV9p3BUGiEeJGiEX758SbVSohAWjhxJ9kqxcPIeG/b6ciiF50mRF/LUl0sSNEJsD8CIg9sB
-        xUQ6yYu+INHQUNJHNkKAIWAgMvyRLQqUh8PSkk61AYxQnGgOzlAkGybS1urTEWEvZmMu7DlnIOnUy9ci
-        kcpBX5WVldljx46N3DfQiaARmqw+p454I/+Y2Pfv37OIBvpSKuDDP3quo46hmUSUEydO+PNJ5AUl05dK
-        EvyUgQE5LEjA6NevX2/cJoiskpeqA6LrlClTQvNCvaFkqAMEw8KoR9ZA4ect8LKwvhRKRUWFhdeFJJ3n
-        hIywbTs7f/78ouXidSQcjJdbk5SjDo/HMUIstnk6Ab2H/utLfw6E8zlz5qgPEbW0tNhYxdSXUkHCPb76
-        pT7og3JMJvZIA8+KPPARoqj7dTK8sfBMiCxxBdEPQ1/TgwkeaE88v3S28tpRTxrBEKGkqAuePY4R4kNP
-        gupTfHoEXzDQl0KBEc6bN0/VFwcWTARpy8vLbdRDZ/sLMEL05XDpowpWmuN+A+jcuXOqP9A20EeTT2SM
-        CKtWrbLw9kBShSuGdIq1cuXKyJ/CGw6kRQRE5+mfIoFnEslgiBVVpJMS1bUQ1BnRSTo9dt1RF/SP/iky
-        GAqizcWIjdKirfHxLpQfR5Cmvr4+s3DhwtByPb0bLp8oElcXPPCVBIzQTNqVEEIIIYQQQgghhBBCCCGE
-        EEIIIYQQQgghhBBCCCGEEEIIIYQQQgghhBBCCCGEEEIIIYQQQgghhBBCCCGEEEIIIYQQQgghhBBCCCGE
-        EEIIIYQQQgghhBBCCCGEkL+dMWP+B8y1t7A0JufFAAAAAElFTkSuQmCC
+        iVBORw0KGgoAAAANSUhEUgAAAMkAAADJCAYAAACJxhYFAAAAIGNIUk0AAHolAACAgwAA+f8AAIDoAABS
+        CAABFVgAADqXAAAXb9daH5AAAAAJcEhZcwAACxIAAAsSAdLdfvwAAAbJSURBVHhe7ds/iyTHHcZxvQEp
+        d6BX4EyBAgeCw7EjIRw4UeZICA5FB05sUGQnkgWWhb0YJE4cQiCfYTHGYIPBQqBDga3gxL2Wdf1EF88y
+        fKenqmdmb718gw+791R19b/6TXfP9b5wdXUlaQWGkgJDSYGhpMBQUmAoKTCUFBhKCgwlBYaSAkNJgaGk
+        wFBSYCgpMJQUGEoKDCUFhpICQ0mBoaTAUFJgKCkwlBQYSgoMJQWGkgJDSYGhpMBQUmAoKTCUFBhKCgwl
+        BYaSAkNJgaGkwFBSYCgpMJQUGEoKDCUFhpICQ0mBoaTAUFJgKCkwlBQYSgoMJQWGkgJDSYGhpMBQUmAo
+        KTCUFBhKCgwlBYaSAkNJgaGkwFBSYCgpMJQUGEoKDCUFhpICQ0mBoaTAUFJgKCkwlBQYSgoMJQWGkgJD
+        SYGhpMBQUmAoKTCUFBhKCgwlBYaSAkNJgaEO+89/v335/Q9+d3kqtI7PPv/iF9R3i39/+dWPaB06DEPd
+        rJrElFeRUK6bhaFulkVyu2Go7f7xz3/9pCb3jLUi+eTho1/v9l9T66extB2G2q6eVer+f8Zakfz1b3//
+        GS2zT62fxtJ2GOpmebt1u2Gom2WR3G4Y6mbtKwafL24HDCUFhpICQ0mBoaTAUFJgKCkwlBQYSgoMJQWG
+        kgLDc6A3VtfQGId8/eSbH9ayT7979hK1jxp9k7fWR8uPoPF2HfNGby1P+T676z6Exrhuy9vQNA7pY1Pb
+        OWB4DvUSX3M1aNOfm9ZytfyHH/3xU2ofVe9SXduWNZe1rtmirH2rZXfGIpcXf/r49zTGmj7+6DGc2J5y
+        OfLi5cQxLJf1JwE0DlnGxpdCzwHDc6idqhNeJ2QEjbGmXgasdfSDfsyn8HISnrQT9/O2Lff2af1+U/1m
+        i7ItW5Pyqi3/uP3++j6fPHz0Ze3L1vHrJ7WT6rumJnGNWdtDy+8auZIs52z6Q+1OF0ntHLWdQh3oto6L
+        dvBfqZ/HrGs5CU+obVdb373W97czb+zWBGnL1CR+ndqva7d0r7W+U8fu2vgnuyXpE/OUY/75L5dv15iz
+        H2h9W6jtHDA8h9kTPaNud5bx36p/t4J575iDuJyEoSIp1Xdm32aKpLSxH8/sz6mLpJ69av31p8TUvsW1
+        czY9J5bzY5HMWD6RLton0g/q3+1T/cft3/e3/j3GchJuTZFUv9b/uRXJcpU+6aSsMWdvszqLZIMau64e
+        O9nFkSdhqEhaIf609T3b7VZ5nkXSb4lOMVZ37Jh3ukgOPbjTcocstwL32/KvXM/bgXyr1rnlAb4Xybkf
+        3NvPoSLpD/DURq6Nf/TErvVu+YZtTY15zK3bnS6SOnErNu10ncC27MVuXrdeldcB3W07ZDkJtI1o9oTP
+        FEkr1F+1vlNX4VMVyXJsTzoZTzHmnS6Sc1xJatx2+X6T2tr63t1yMJeT8KhN0Dfadr26T7W3q8gfWt8H
+        M4XSlv1+Erf1rH4F3Lb/WW3/EVeqzUVSt4+17q3PdeRUY97pIpn5NByxfHd//+l3z16k9jZJ6uvg+9WP
+        2vfpRUJtpBXIL1v/B6O3dn0SDzjmPxOPKpKt615zqjEtkgnLQX+X2rrWZ/oBfrZISvUf3b8+iat//X7d
+        Uvjf35pueZ4qffz6Se2H1FWxtoHatqriqDGPfWWoWCSDagLVmM3FgKkH+Jsqkn2TuH/7s/V4HVMk/f9E
+        ahuofYtle042pkUyqH/a1Zhrer+ZZ4Zari0zXSSjk2BkEtfVr7Z7y0uUxxRJrXf2yntI7ccpx1zOj0Vy
+        SI03OvH7hKM2MlskbTs2PZOsTeL+P9JbJtfWIumT7xS3RF3/kNpS7PtYJAP6ffvoge/fqow+wPciqcnf
+        fn9nTfVrHrTfh/dtdBL3/Zy9TdlSJL0oa7nal0NGvqFatuOkY5bqW+NS2zlgeA61U7Vz1DZr9spQqv/o
+        p3I/CaNmv9Lsk2dkEvcHXmrbZ2b8rh/TUSPnkpZbMzo/7myRSP+vMJQUGEoKDCUFhpICQ0mBoaTAUFJg
+        KCkwlBQYSgoMJQWGkgJDSYGhpMBQUmAoKTCUFBhKCgwlBYaSAkNJgaGkwFBSYCgpMJQUGEoKDCUFhpIC
+        Q0mBoaTAUFJgKCkwlBQYSgoMJQWGkgJDSYGhpMBQUmAoKTCUFBhKCgwlBYaSAkNJgaGkwFBSYCgpMJQU
+        GEoKDCUFhpICQ0mBoaTAUFJgKCkwlBQYSgoMJQWGkgJDSYGhpMBQUmAoKTCUFBhKCgwlBYaSAkNJgaGk
+        wFBSYCgpMJQUGEoKDCUFhpICQ0mBoaTAUFJgKCkwlBQYSuquXvgf9mdK76sYShoAAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="iconclose.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAONJREFUWEft
+        lk0KwyAQhd2XLgvtrpcSxB8Qb9CL9G7NptvepHVgBoIEcayaLPxAIsq89zQKisnk0IQQztitplrDWvs0
+        xnyUUnccYgO1oAFaOFSGc+4UC9+xfeHrvb/iVDHR9LbWAE2cKkNKeYmFCwqwdoJWjrULaOEUj5oQzcwJ
+        Tojm5kRJiG7mRC5Ed3NiK8QwcyK9Xut+zXWtIgkx1hxIth1a0RVtwq6/YOvA5W5HU3KnvXuInDnRLUSJ
+        OdE8BMecaBaixpz4O8QhHiRa60cUeXFWnkI7AVo4xGPXR+lkMgYhfkRMLAMoXD5PAAAAAElFTkSuQmCC
 </value>
   </data>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
